# python-practical-guide

./: .gitignore  README.md  pyproject.toml
src/assigments/: assigment_01.py  data_structures_assigment.py  files_assigment.py  functions_strings_assigment.py  loops_conditionals_assigment_01.py  oop_assigment.py  stdlib_assigment.py
src/core/: block.py  blockchain.py  cli_node.py  node.py  transaction.py  wallet.py
src/python_practical_guide/: block.py  blockchain.py  file_util.py  hash_util.py  node.py  transaction.py  verification.py
src/ui/: network.html  node.html
src/util/: verification.py
tests/: test_python_practical_guide.py
